[gd_scene load_steps=10 format=2]

[ext_resource path="res://models/grobbo_alien_hatchling/scene.gltf" type="PackedScene" id=1]
[ext_resource path="res://scripts/monster.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=2]
radius = 3.0

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereShape" id=3]
radius = 4.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.85098, 1, 0, 1 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 10.0
height = 20.0
radial_segments = 10
rings = 4

[sub_resource type="Animation" id=7]
resource_name = "Die"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spin"
}, {
"args": [  ],
"method": "spin"
}, {
"args": [  ],
"method": "spin"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CollisionArea")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "TakeDamage"
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spin"
} ]
}

[node name="Monster" type="KinematicBody" groups=["Monster"]]
script = ExtResource( 2 )

[node name="monster_mesh_scene" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.52854e-16, 3.49691e-09, 0.08, 0.08, -3.49691e-09, 8.33798e-22, 3.49691e-09, 0.08, -3.49691e-09, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="DetectionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
transform = Transform( 60, 0, 0, 0, 60, 0, 0, 0, 60, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CollisionArea"]
shape = SubResource( 3 )

[node name="MinimapIndicator" type="MeshInstance" parent="."]
layers = 2
mesh = SubResource( 5 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 7 )
anims/TakeDamage = SubResource( 6 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
